--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,10 +3,8 @@ body {
   color: #FFFFFF;
   background: -webkit-gradient(linear, left top, left bottom, from(#134F45), to(#222F48)) fixed;
   background: linear-gradient(#134F45, #222F48) fixed;
-  font-size: 1em;
 }
 
-/* Header */
 .headerBar {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -16,7 +14,7 @@ body {
   border-radius: 20px;
   width: 80%;
   height: 49px;
-  margin-top: 10px;
+  margin-top: 15px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -24,6 +22,7 @@ body {
 .headerBar ul {
   position: absolute;
   padding-left: 0%;
+  width: 80%;
 }
 
 .headerBar li {
@@ -43,10 +42,49 @@ body {
   border-radius: 20px;
 }
 
-/*main contents*/
-#centerObject {
+#menuIcon {
+  float: left;
+  display: none !important;
+}
+
+#menuList {
+  display: none !important;
+}
+
+#containerFooter {
   text-align: center;
   font-size: 1em;
+}
+
+#lineBreaker {
+  padding-top: 30px;
+  width: 60%;
+  height: 20px;
+}
+
+#linkList {
+  padding-top: 6px;
+}
+
+#linkList li {
+  list-style-type: none;
+  display: inline-block;
+  margin-left: 35px;
+  margin-right: 35px;
+}
+
+#linkList a {
+  color: #fff;
+}
+
+#containerSummary {
+  text-align: center;
+  font-size: 1em;
+}
+
+#containerSummary h1 {
+  font-size: 1.6em;
+  margin-bottom: 30px;
 }
 
 #picProfile {
@@ -57,15 +95,10 @@ body {
   margin-bottom: 10px;
 }
 
-#centerObject h1 {
-  font-size: 1.6em;
-  margin-bottom: 30px;
-}
-
 #glassBackground {
   background-color: #0000004f;
-  width: 80%;
-  height: 70%;
+  width: 70%;
+  height: 60%;
   margin-right: auto;
   margin-left: auto;
   padding-bottom: 40px;
@@ -78,5 +111,43 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 60%;
+}
+
+@media (max-width: 554px) {
+  .headerBar {
+    position: relative;
+    width: 95%;
+  }
+  .headerBar li {
+    display: none;
+  }
+  #menuIcon {
+    display: initial !important;
+    padding-left: 25px;
+    position: relative;
+    top: -7.5px;
+  }
+  #menuIcon:hover #menuList {
+    display: block !important;
+    position: initial;
+    padding-top: 30px;
+    padding-left: 15px;
+    background-color: teal;
+    width: 200px;
+    left: 0%;
+  }
+  #menuIcon:hover .menuItem {
+    padding-top: 10px;
+    display: block !important;
+    padding-left: 10px;
+    padding-bottom: 30px;
+  }
+}
+
+@media (max-width: 554px) and (hover: hover) and (pointer: fine) {
+  #menuIcon:hover .menuItem a:hover {
+    border-radius: 0%;
+    background-color: orange !important;
+  }
 }
 /*# sourceMappingURL=main.css.map */
